--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
 
   <body>
-      <h1> DAVE IS THE BEST </h1>
+<img src="https://avatars2.githubusercontent.com/u/54512817?v=4">
+
   </body>
 
 </html>
