--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 
   <body>
 <img src="https://avatars2.githubusercontent.com/u/54512817?v=4">
-
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
   </body>
 
 </html>
