--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <img src="https://avatars2.githubusercontent.com/u/54512817?v=4">
 <ol>
     <li>This</li>
-    <li>Is an</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>Ordered list</li>
 </ol>
   </body>
